--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "media/js/libs/ckeditor/source/plugins/wsc"]
 	path = media/js/libs/ckeditor/source/plugins/wsc
 	url = git://github.com/WebSpellChecker/ckeditor-plugin-wsc.git
+[submodule "media/js/libs/ckeditor/source/plugins/descriptionlist"]
+	path = media/js/libs/ckeditor/source/plugins/descriptionlist
+	url = git://github.com/Reinmar/ckeditor-descriptionlist
